--- a/EShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/EShopSolution.AdminApp/Views/User/Index.cshtml
@@ -69,5 +69,6 @@
                 </table>
             </div>
         </div>
+        @await Component.InvokeAsync("Pager", Model);
     </div>
 </div>
