--- a/EShopSolution.WebApp/Views/_ViewImports.cshtml
+++ b/EShopSolution.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using EShopSolution.WebApp
 @using EShopSolution.WebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, LazZiya.TagHelpers
+@addTagHelper *, LazZiya.ExpressLocalization
+@using System.Globalization
